<resources>
    <string name="app_name">first_app</string>
    <string name="appbar">Calculator</string>
    <string name="rprac">(</string>
    <string name="lprac">)</string>
    <string name="dot">.</string>
    <string name="re">C</string>
    <string name="mod">%</string>
    <string name="plus">+/-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="equal">=</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
</resources>


