<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/appbar"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:background="@color/purple_700">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_weight="1"
        android:text="25+20"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:background="@color/black">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mod"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:background="@drawable/rounded_button_graylight">


            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_7"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_gray">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_4"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_gray">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_1"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_gray">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/re"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_gray">

            </Button>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rprac"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:background="@drawable/rounded_button_graylight">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_8"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_gray">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_5"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_gray">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_2"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_gray">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_0"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_gray">

            </Button>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lprac"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:background="@drawable/rounded_button_graylight">>

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_9"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_gray">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_6"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_gray">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_3"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_gray">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_gray">

            </Button>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_orange">


            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mul"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_orange">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/div"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_orange">

            </Button>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/equal"
                android:textSize="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_orange">

            </Button>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
